plugins {
    id 'java'
    id 'kotlin'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.graphics' ]
}

application {
    applicationDefaultJvmArgs = ["--add-opens=javafx.graphics/javafx.scene=tornadofx"]
    mainClassName = 'sudoku.desktop/org.netomi.sudoku.ui.SudokuApp'
}

sourceCompatibility = '11'
targetCompatibility = '11'

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
    kotlinOptions.freeCompilerArgs = [
        "-Xjvm-default=enable"
    ]
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
    kotlinOptions.freeCompilerArgs = [
        "-Xjvm-default=enable"
    ]
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': mainClassName
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {
    implementation project(':core')

    implementation "no.tornado:tornadofx:1.7.20"
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-reflect:1.4.10") {
            because 'version 1.9 pulled from httpclient has bugs affecting this application'
        }
    }

    // junit 5
    testCompile     "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testCompile     "org.junit.jupiter:junit-jupiter-params:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}
